--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "prettier-plugin-solidity": "^1.1.2",
     "solidity-coverage": "^0.8.2",
     "typechain": "^8.1.0"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.8.1"
   }
 }
